✒️ added new font, fixed para spacing

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -10,8 +10,10 @@
 
 @font-face {
 	font-family: "hk_grotesk";
-	src: url("/assets/fonts/hk-grotesk/hkgrotesk-italic.woff2") format("woff2"),
-		url("/assets/fonts/hk-grotesk/hkgrotesk-italic.woff") format("woff");
+	src: url("/assets/fonts/hk-grotesk/hkgrotesk-lightitalic.woff2")
+			format("woff2"),
+		url("/assets/fonts/hk-grotesk/hkgrotesk-lightitalic.woff")
+			format("woff");
 	font-weight: normal;
 	font-style: italic;
 	font-display: swap;
@@ -24,10 +26,6 @@
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
-}
-
-::selection {
-	background: rgb(255, 231, 185);
 }
 
 * {
@@ -103,7 +101,7 @@ ol,
 }
 
 p {
-	padding-bottom: 1.2em;
+	padding-bottom: 1.6em;
 }
 li {
 	font-size: inherit;
